@@ -6,6 +6,11 @@
 
 2019-05-05  James Youngman  <jay@gnu.org>
 
+	Switch class release_list from using mylist<T> to vector<T>.
+	* src/rel_list.h: Switch data structures from mylist<T> to
+	std:vector<T> (for which mylist is an alias anyway).
+	* src/rl-merge.cc (remove): Likewise.
+
 	Switch class sccs_file_iterator from using mylist<T> to
 	vector<T>.
 	* src/fileiter.h: Switch data structures from mylist<T> to
